Update DefaultLineJoining.java
simplify code